<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="155dp"
    android:padding="30dp"
    android:textAlignment="textStart"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="12dp"
    app:cardElevation="30dp"
    app:cardMaxElevation="4dp"
    android:layout_marginTop="5dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_margin="10dp"
        android:visibility="visible"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="118dp"
            android:layout_height="109dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/imgdes"
            android:padding="10dp"
           android:src="@drawable/train" />

        <TextView
            android:id="@+id/showTrainNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="262dp"
        android:layout_height="match_parent"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">


        <TextView
            android:id="@+id/traindetail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/train_detail"
            android:layout_marginStart="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/depa"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/flag"
            android:src="@drawable/flags" />

        <ImageView
            android:id="@+id/dest"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginTop="83dp"
            android:contentDescription="@string/flag"
            android:src="@drawable/endflag" />

        <TextView
            android:id="@+id/departuretime"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="60dp"
            android:text="@string/depart_time"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/departstationname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="35dp"
            android:text="@string/departure_station"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/destarrivaltime"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="110dp"
            android:text="@string/arrive_time"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/destinationstationname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="85dp"
            android:text="@string/destination_station"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>