<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:layout_marginLeft="-20dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tint="@color/primary_dark" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/brandon_grotesque_black"
            android:text="@string/Report"
            android:textColor="@color/primary_dark"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20dp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
    <TextView
        android:id="@+id/TopicShowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Select_Topic"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp">

    </TextView>

    <Spinner
        android:id="@+id/topicReport"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/Topics"
        android:background="@drawable/spinner_border"
        android:paddingVertical="5dp"
        android:spinnerMode="dropdown" />


    <TextView
        android:id="@+id/DateShowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/spinner_border"
        android:padding="10dp"
        android:id="@+id/dateShowReport"
        android:hint="@string/dateFormat"
        android:textSize="24sp" />

            <TextView
                android:id="@+id/LocaShowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location Brief Description"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="20sp">

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LocaReport"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:counterEnabled="true"
                app:counterMaxLength="80">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/LocaText"
                    android:gravity="top"
                    android:hint="Descibe the place briefly" />

            </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/DescripShowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp">

    </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descripReport"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginBottom="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="350">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/DescText"
                    android:gravity="top"
                    android:hint="@string/descibe_the_situation" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/attachBtn"
                android:translationX="30dp" />
            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:text="@string/submitBtn"
                android:translationX="200dp"
                android:translationY="-50dp"/>

    <ImageView
        android:id="@+id/attachIMG"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars"
        android:translationY="-30dp"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>