<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="30dp"
    app:cardMaxElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/imageShow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/prom1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_gradient" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView1"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:text="@string/name"
            android:layout_marginBottom="-8dp"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/brandon_grotesque_light"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/eventDistance"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Distance"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateFormat"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:layout_above="@id/eventDistance"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>